Fix spacing issues, add proper borders

--- a/navstyles.css
+++ b/navstyles.css
@@ -4,7 +4,6 @@ ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
-	width: 200px;
 	background-color: #ffffff;
 }
 
@@ -30,7 +29,6 @@ li a:hover {
 	background-color: #ffffff;
 	min-width: 160px;
 	box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-	padding: 12px 16px;
 	z-index: 1;
 }
 
