--- a/styles.css
+++ b/styles.css
@@ -255,11 +255,12 @@ h1 {
 
 p {
 	color: #7dc7ea;
-	text-align: left;
+	text-align: center;
 	font-size: 20px;
 	line-height:28px;
 	word-wrap: break-word;
 }
+
 a {
 	color: #2aabdf;
 	text-decoration: none;
@@ -272,22 +273,31 @@ a {
 	border-bottom-color: #000000;
 }
 
+#copyright-data {
+	background-color: #ffffff;
+	border-top-width: thin;
+	border-top-style: solid;
+	border-top-color: #000000;
+}
+
 .row {
 	display: flex;
 	padding: 0;
-	margin-bottom: 10px;
 }
 
 .column {
 	background-color: #ffffff;
-	padding-right: 20px;
-	margin-bottom: 10px;
 }
 
 .left {
 	width: 20%;
+	border-right-width: thin;
+	border-right-style: solid;
+	border-right-color: #000000;
 }
 
 .right {
 	width: 80%;
+	padding-left: 20px;
+	padding-right: 20px;
 }
